--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.patelbiraj.UltraSearch"
+    package="com.patelbiraj.ultrasearch"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="15" />
 
     <application
-        android:name="com.patelbiraj.UltraSearch.UltraSearchApplication"
-        android:icon="@drawable/ic_launcher"
+        android:name=".UltraSearchApplication"
         android:label="@string/app_name" >
         <activity
-            android:name="com.patelbiraj.UltraSearch.UI.UltraSearchSplashActivity"
+            android:name="com.patelbiraj.ultrasearch.UI.UltraSearchSplashActivity"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,8 +19,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.patelbiraj.UltraSearch.UI.UltraListViewActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden" />
+            android:name=".UI.UltraListViewActivity"
+            UI.UltraListViewActivitye.UI.UltraListViewActivity="" >
+        </activity>
     </application>
 
 </manifest>
